--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -3,7 +3,7 @@
   "description": "An app that helps you spread participants across a tables during a number of rounds.",
   "icons": [
     {
-      "src": "assets.favicon.png",
+      "src": "favicon.png",
       "sizes": "48x48",
       "type": "image/png"
     }
