--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^4.4.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jest": "^24.9.0",
     "ngx-store": "^1.4.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
